feat: hoàn thiện đăng xuất, đồng bộ DB và bổ sung data mẫu
- feat: thêm nút đăng xuất và logic chuyển hướng tại MainMenuView
- feat: xóa phần đăng ký tài khoản tại màn hình login để bảo mật
- fix: sửa lỗi biên dịch toàn bộ procedure/trigger và bổ sung 14 mã lỗi thiếu
- fix: xử lý lỗi giới hạn công suất bằng cách bơm data mẫu cho năm 2026
- style: tô màu riêng biệt cho từng cột biểu đồ trong báo cáo doanh thu
- chore: bổ sung dữ liệu mẫu cho hơn 30 bảng và nguyên liệu vào script_insert_data.sql